--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,6 +11,8 @@
   display: inherit;
   justify-content: inherit;
   align-items: inherit;
+  flex-direction: inherit;
+  gap: 1rem;
   font-size: 0.85rem;
   max-width: var(--max-width);
   width: 100%;
